--- a/shortcut_composer.desktop
+++ b/shortcut_composer.desktop
@@ -3,5 +3,6 @@ Type=Service
 ServiceTypes=Krita/PythonPlugin
 X-KDE-Library=shortcut_composer
 X-Python-2-Compatible=false
+X-Krita-Manual=manual.html
 Name=Shortcut Composer
 Comment=Api for creating complex krita keyboard shortcuts. 
